init develop branch 1. base is common --> automator --> autojs -->inrt -->app 2. clean build.gradle (namespace/buildFeatures/compileSdk/minSdk/..) 3. upgrade gradle to 8.8 &　agp to 8.5.0

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,5 @@
-include ':app', ':automator', ':common', ':autojs', ':inrt'
+include   ':common'
+include  ':automator'
+include  ':autojs'
+include   ':inrt'
+include ':app'
