--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,32 @@
-import groovy.json.JsonSlurper
+//import groovy.json.JsonSlurper
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.10'
+    ext.kotlin_version = '1.9.24'
     repositories {
-		maven { url 'https://maven.aliyun.com/repository/public' }
+        gradlePluginPortal()
         google()
+        mavenCentral()
         jcenter()
+        maven { url 'https://maven.aliyun.com/repository/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:8.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.jakewharton:butterknife-gradle-plugin:9.0.0-rc2'
+//        classpath 'com.jakewharton:butterknife-gradle-plugin:9.0.0-rc2'
     }
 }
 
 allprojects {
     repositories {
-        maven { url 'https://maven.aliyun.com/repository/public' }
+        mavenCentral()
+        google()
         maven {
             url "https://jitpack.io"
         }
-        google()
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
     }
 }
 
@@ -31,6 +34,6 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-ext {
-    versions = new JsonSlurper().parse(file('./project-versions.json'))
-}
+//ext {
+//    versions = new JsonSlurper().parse(file('./project-versions.json'))
+//}
