--- a/automator/src/main/AndroidManifest.xml
+++ b/automator/src/main/AndroidManifest.xml
@@ -1,12 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
-          package="com.stardust.automator"
-    >
-
-    <application
-        android:supportsRtl="true"
-        >
-
-    </application>
-
-</manifest>
+<manifest />
