modify autojs -  clean build.gradle (namespace/buildFeatures/compileSdk/minSdk/..)

--- a/autojs/src/main/AndroidManifest.xml
+++ b/autojs/src/main/AndroidManifest.xml
@@ -1,7 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
-          package="com.stardust.autojs"
-    >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
@@ -11,8 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
     <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS"/>
 
-    <application
-        >
+    <application>
         <activity
             android:name=".execution.ScriptExecuteActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
