--- a/autojs/build.gradle
+++ b/autojs/build.gradle
@@ -1,14 +1,19 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion versions.compile
-    buildToolsVersion versions.buildTool
+    compileSdk 34
+    lintOptions {
+        abortOnError false
+    }
+
+    buildFeatures {
+        buildConfig true
+    }
 
     defaultConfig {
-        minSdkVersion versions.mini
-        targetSdkVersion versions.target
+        namespace "com.stardust.autojs"
+        minSdk 26
         versionCode 1
         versionName "1.0"
 
@@ -22,57 +27,56 @@ android {
         }
     }
 
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    lintOptions {
-        abortOnError false
-    }
-}
 
-repositories {
-    flatDir {
-        dirs 'libs'
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
-    google()
 }
 
 dependencies {
+    implementation "androidx.appcompat:appcompat:1.0.2"
+    implementation 'org.greenrobot:eventbus:3.0.0'
+    implementation 'net.lingala.zip4j:zip4j:1.3.2'
+    implementation('com.afollestad.material-dialogs:core:0.9.2.3', {
+        exclude group: 'com.android.support'
+    })
+    implementation 'com.google.android.material:material:1.1.0-alpha01'
+    implementation 'com.github.hyb1996:EnhancedFloaty:0.31'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+    // OkHttp
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    // JDeferred
+    implementation 'org.jdeferred:jdeferred-android-aar:1.2.6'
+    //RootShell
+    implementation 'com.github.Stericson:RootShell:1.6'
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.2'
+    // log4j
+    implementation group: 'de.mindpipe.android', name: 'android-logging-log4j', version: '1.0.3'
+    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+
+    implementation 'com.github.hyb1996:settingscompat:1.1.5'
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    // OpenCv
+    implementation(name: 'opencv-4.2.0', ext: 'aar')
+    // Terminal emulator
+    implementation(name: 'libtermexec-release', ext: 'aar')
+    implementation(name: 'emulatorview-release', ext: 'aar')
+    implementation(name: 'term-debug', ext: 'aar')
+    implementation(name: 'paddleocr', ext: 'aar')
+    implementation files('libs/rhino-1.7.7.2.jar')
+    implementation project(path: ':common')
+    implementation project(path: ':automator')
+
+    testImplementation 'junit:junit:4.12'
+
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.1-alpha01', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testImplementation 'junit:junit:4.12'
-    api fileTree(dir: 'libs', include: ['*.jar'])
-    api 'org.greenrobot:eventbus:3.0.0'
-    api 'net.lingala.zip4j:zip4j:1.3.2'
-    api('com.afollestad.material-dialogs:core:0.9.2.3', {
-        exclude group: 'com.android.support'
-    })
-    api 'com.google.android.material:material:1.1.0-alpha01'
-    api 'com.github.hyb1996:EnhancedFloaty:0.31'
-    api 'com.makeramen:roundedimageview:2.3.0'
-    // OpenCv
-    api(name: 'opencv-4.2.0', ext: 'aar')
-    // OkHttp
-    api 'com.squareup.okhttp3:okhttp:3.10.0'
-    // JDeferred
-    api 'org.jdeferred:jdeferred-android-aar:1.2.6'
-    //RootShell
-    api 'com.github.Stericson:RootShell:1.6'
-    // Gson
-    api 'com.google.code.gson:gson:2.8.2'
-    // log4j
-    api group: 'de.mindpipe.android', name: 'android-logging-log4j', version: '1.0.3'
-    api group: 'log4j', name: 'log4j', version: '1.2.17'
-    // Terminal emulator
-    api(name: 'libtermexec-release', ext: 'aar')
-    api(name: 'emulatorview-release', ext: 'aar')
-    api(name: 'term-debug', ext: 'aar')
-    api(name: 'paddleocr', ext: 'aar')
-    api files('libs/rhino-1.7.7.2.jar')
-    api project(path: ':common')
-    api project(path: ':automator')
 }
 
